[package]
name = "tb"
version = "0.1.0"
edition = "2024"
description = "A tmux-based bridge allowing AI agents to inject commands into interactive terminal sessions"
license = "MIT"
repository = "https://github.com/maxeonyx/tmux-bridge"

[[bin]]
name = "tb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
